# chatbot_poc

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup.sh
src/: main.py
src/bot/: __init__.py  assistants.py  bot_instance.py
src/cli/: __init__.py  streamlit_app.py
src/core/: chatbot.py  error_manager.py  graph.py  prompts.py  state.py
src/db/: __init__.py  data_generators.py  db_schema.py  populate_db.py
src/models/: __init__.py  model_factory.py  model_names.py
src/tools/: __init__.py  common_tool.py  tools.py
