[project]
name = "chatbot-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core==0.3.33",
    "langchain-openai==0.3.3",
    "langgraph==0.2.69",
    "matplotlib==3.10.0",
    "openai==1.61.1",
    "colorama==0.4.6",
    "python-dotenv==1.0.1",
]
