[project]
name = "chatbot-poc"
version = "0.1.0"
description = "A proof of concept chatbot application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.23",
    "langchain-core>=0.3.33",
    "langchain-openai==0.3.12",
    "langchain-anthropic==0.3.10",
    "langchain-deepseek==0.1.3",
    "langchain-ollama==0.3.1",
    "langchain-google-genai==2.1.3",
    "langgraph==0.2.69",
    "matplotlib==3.10.0",
    "openai>=1.68.2",
    "colorama==0.4.6",
    "python-dotenv==1.0.1",
    "langgraph-checkpoint>=2.0.24",
    "streamlit==1.35.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

# Ruff - fast linter and formatter
[tool.ruff]
line-length = 120
target-version = "py311"

lint.select = ["E", "F", "W", "I", "ANN", "UP"]
lint.ignore = ["E501", "E203"]
lint.exclude = [".venv", "__pycache__", ".git"]

# Code formatting
[tool.ruff.format]

